Bug 1601620 - ThreadSanitizer: data race in mozilla::net::CacheFileUtils::CachePerfStats, r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D55972

--HG--
extra : moz-landing-system : lando